theme/css/b4st.css
/*
 * b4st CSS
 */

/* colours */

.bg-scout-purple, .has-scout-purple-background-color {
	background-color: #7413dc !important;
}
.bg-scout-purple-50 {
	background-color: rgba(116, 20, 220, 0.5) !important;
}
.border-scout-purple {
	background-color: #7413dc !important;
}
.bg-scout-purple-link:hover {
	background-color: rgba(116, 20, 220, 0.5) !important;
}
.border-scout-purple-link:hover {
	background-color: rgba(116, 20, 220, 0.5) !important;
}
.bg-scout-green, .has-scout-green-background-color {
	background-color: #23a950 !important;
}
.bg-scout-blue, .has-scout-blue-background-color {
	background-color: #006ddf !important;
}
.bg-scout-navy, .has-scout-navy-background-color {
	background-color: #003982 !important;
}
.bg-scout-teal, .has-scout-teal-background-color {
	background-color: #00a794 !important;
}
.bg-scout-red, .has-scout-red-background-color {
	background-color: #e22e12 !important;
}
.bg-scout-pink, .has-scout-pink-background-color {
	background-color: #ffb4e5 !important;
}
.bg-scout-yellow, .has-scout-yellow-background-color {
	background-color: #ffe627 !important;
}
.bg-white, .has-white-background-color {
	background-color: #ffffff !important;
}
.bg-grey-5, .has-grey-5-background-color {
	background-color: #F2F2F2 !important;
}
.bg-grey-20, .has-grey-20-background-color {
	background-color: #CCCCCC !important;
}
.bg-grey-40, .has-grey-40-background-color {
	background-color: #999999 !important;
}
.bg-grey-60, .has-grey-60-background-color {
	background-color: #666666 !important;
}
.bg-grey-80, .has-grey-80-background-color {
	background-color: #333333 !important;
}
.bg-black, .has-black-background-color {
	background-color: #000000 !important;
}
.text-grey-5, .has-grey-5-color  {
	color: #F2F2F2 !important;
}
.text-grey-20, .has-grey-20-color  {
	color: #CCCCCC !important;
}
.text-grey-40, .has-grey-40-color  {
	color: #999999 !important;
}
.text-grey-60, .has-grey-60-color  {
	color: #666666 !important;
}
.text-grey-80, .has-grey-80-color  {
	color: #333333 !important;
}
.text-black, .has-black-color  {
	color: #000000 !important;
}
.text-white, .has-white-color  {
	color: #ffffff !important;
}
.text-scout-yellow, .has-scout-yellow-color  {
	color: #ffe627 !important;
}
.text-scout-red, .has-scout-red-color  {
	color: #e22e12 !important;
}
.text-scout-pink, .has-scout-pink-color  {
	color: #ffb4e5 !important;
}
.text-scout-navy, .has-scout-navy-color  {
	color: #003982 !important;
}
.text-scout-blue, .has-scout-blue-color {
	color: #006ddf !important;
}
.text-scout-green, .has-scout-green-color {
	color: #23a950 !important;
}
.text-scout-purple, .has-scout-purple-color {
	color: #7413dc !important;
}
.text-scout-teal, .has-scout-teal-color {
	color: #00a794 !important;
}

.border-scout-teal {
	border-color: #00a794!important;
}

/* shadow */
.hover-shadow {
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.hover-shadow:hover {
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.solid-shadow {
	box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
}

/* buttons */

.btn-scout-purple {
	background-color: #7413dc;
	border-color: #7413dc;
	color: white;
}
.btn-scout-purple:hover {
	background-color: #5B00C3;
	border-color: #5B00C3;
}
.btn-scout-purple:focus {
	box-shadow: 0 0 0 0.2rem rgba(45,7,86,.5);
}
.btn-scout-teal {
	background-color: #00a794;
	color: white;
}
.btn-scout-teal:hover {
	background-color: #008E7B;
}
.btn-outline-scout-teal {
	color: #00a794 !important;
	background-color: transparent !important;
	background-image: none;
	border-color: #00a794 !important;
}
.btn-outline-scout-teal:hover {
	color: white !important;
	background-color: #00a794 !important;
}

.btn-circle {
	width: 50px;
	height: 50px;
	padding: 6px 0px;
	border-radius: 45px;
	text-align: center;
	font-size: 25px;
	line-height: 1.45857;
}
.wp-block-button .wp-block-button__link {
	display: inline-block;
	font-weight: 400;
	text-align: center;
	text-decoration: none;
	white-space: nowrap;
	vertical-align: middle;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border: 1px solid transparent;
	padding: .375rem .75rem;
	font-size: 1rem;
	line-height: 1.5;
	border-radius: 0.25rem;
	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
	background: transparent;
	font-family: "Nunito Sans", sans-serif !important;
	background-color: #000000;
}

.wp-block-button .wp-block-button__link:hover {
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.wp-block-button.is-style-default .wp-block-button__link {
	border-radius: 0.25rem;
}

.wp-block-button.is-style-outline .wp-block-button__link {
	border: 2px solid currentcolor !important;
}
.is-style-outline .wp-block-button__link {
	background-color: transparent !important;
	border: 2px solid currentcolor !important;
}
.wp-block-button.is-style-squared .wp-block-button__link {
	border-radius: 0rem;
}

/* Sticky Footer */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}
main {
    flex: 1 0 auto;
}

.site-header-image {
	display: block;
	margin: auto;
}

.wp-caption {}
.wp-caption-text {}
.sticky {
	background-color: rgba(0, 58, 130, .1);
}
.screen-reader-text {}
.gallery-caption {}

.bypostauthor {}

.alignleft {
	float: left;
	margin-right: 15px;
}

.alignright {
	float: right;
	margin-left: 15px;
}

.aligncenter {
	display: block;
	margin: auto;
}

/* Max img widths */

img,
.size-auto,
.size-full,
.size-large,
.size-medium,
.size-thumbnail {
	max-width: 100%;
	height: auto;
}

div.wp-caption {
	max-width: 100% !important;
}

/* Author bio */

.author-bio .avatar {
	border: 1px solid #dee2e6;
	border-radius: 50%;
}

/* Main content */

.col-sm-12 .alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
	width: auto;
	max-width: 1000%;
}

.col-sm-12 .alignwide {
	margin-left: calc(25% - 25vw);
	margin-right: calc(25% - 25vw);
	width: auto;
	max-width: 1000%;
}

.alignwide img, .alignfull img {
	display: block;
	margin: 0 auto;
}

.page-item.active .page-link {
	background-color: #7413dc;
	border-color: #7413dc;
}

.page-link {
	color: #7413dc;
}

.page-link:hover {
	color: #7413dc;
}

/* navbar */

.navbar-nav .nav-link, .navbar-brand, .footer-item {
	color: white !important;
}
.navbar-nav .nav-link:hover , .navbar-brand:hover, .footer-item:hover {
	color: lightgrey !important;
}
.dropdown-submenu {
	position: relative;
}
.dropdown-submenu>.dropdown-menu {
	top: 0;
	left: 100%;
	margin-top: 0px;
	margin-left: -1px;
	-webkit-border-radius: 0 6px 6px 6px;
	-moz-border-radius: 0 6px 6px;
	border-radius: 0 6px 6px 6px;
}
.dropdown-submenu:hover>.dropdown-menu {
	display: block;
}
.dropdown-submenu>a:after {
	display: block;
	content: " ";
	float: right;
	width: 0;
	height: 0;
	border-color: transparent;
	border-style: solid;
	border-width: 5px 0 5px 5px;
	border-left-color: #212529;
	margin-top: 5px;
	margin-right: -10px;
}
.dropdown-submenu:hover>a:after {
	border-left-color: #212529;
}
.dropdown-submenu.pull-left {
	float: none;
}
.dropdown-submenu.pull-left>.dropdown-menu {
	left: -100%;
	-webkit-border-radius: 6px 0 6px 6px;
	-moz-border-radius: 6px 0 6px 6px;
	border-radius: 6px 0 6px 6px;
}
@media only screen and (max-width: 768px) {
	.dropdown-menu-sub {
		border-color: transparent;
		border-width: 0;
		border-top: 1px solid rgba(0,0,0,.15);
	}
	.dropdown-submenu>.dropdown-menu {
		-webkit-border-radius: 0;
		-moz-border-radius: 0;
		border-radius: 0;
	}
}

/* Sidebar */

/* banner */

.banner {
	height: 600px;
}

.banner-img {
	min-width: 100% !important;
	max-width: none;
	min-height: 100%;
	width: auto;
	height: auto;
}

/* Hide form placeholders on focus */

input:focus::-webkit-input-placeholder { color: transparent; }
input:focus:-moz-placeholder { color: transparent; } /* FF 4-18 */
input:focus::-moz-placeholder { color: transparent; } /* FF 19+ */
textarea:focus::-webkit-input-placeholder { color: transparent; }
textarea:focus:-moz-placeholder { color: transparent; } /* FF 4-18 */
textarea:focus::-moz-placeholder { color: transparent; } /* FF 19+ */

/* Comments */

#comments,
#reply-title {
	margin-top: 1.5rem;
	margin-bottom: 1rem;
}

.commentlist,
.commentlist ul {
	padding-left: 0;
}

.commentlist li {
	padding: 1rem;
}

.comment-meta {
	margin-bottom: 1rem;
}

.comment > .children {
	margin-top: 1rem;
	margin-right: -0.625rem;
	margin-bottom: -1.625rem;
}
/* Site footer */

